--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <article class="changer">
                 <img src="" id="changer" alt="">
             </article>
-            <article class="changer" id="loginPanel">
+            <article class="changer changerBG" id="loginPanel">
                 <h2>Login</h2>
                 <input type="text" id="login" placeholder="LoginName">
                 <input type="password" id="password" placeholder="Password">
                 <button type="submit" onclick="login()">Login</button>
             </article>
-            <article class="changer" id="bmi">
+            <article class="changer changerBG" id="bmi">
                 <h2>BMI RECHNER</h2>
                 <p>
                     Der BMI-Wert ist eine wichtige Hilfe für ein gesundes Leben. Jetzt schnell und unkompliziert Ihren Body-Mass-Index berechnen.
@@ -30,7 +30,7 @@
                 <input type="number" id="groesse" placeholder="Größe in cm">
                 <button onclick="bmiCalc()">BMI berechnen</button>
             </article>
-            <article id="outputContainer">
+            <article id="outputContainer" class="changerBG">
                 <h2>Ihr BMI im Vergleich</h2>
                 <p id="bmiOutput">23,73</p>
                 <div class="bmiScaleContainer">
@@ -40,9 +40,6 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id, aliquid nulla illo iusto minima! Culpa voluptate illo facilis harum, reprehenderit fugit eligendi deleniti dolor, minima labore quos ratione suscipit!
                 </p>
             </article>
-        </section>
-        <section>
-            <div></div>
         </section>
     </main>
     
