--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <section class="secTop">
+            <h1>Fit4Fun BMI-Rechner</h1>
             <article class="changer">
                 <img src="" id="changer" alt="">
             </article>
@@ -36,8 +37,9 @@
                 <div class="bmiScaleContainer">
                     <div id="bmiScale">23,73 BMI</div>
                 </div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id, aliquid nulla illo iusto minima! Culpa voluptate illo facilis harum, reprehenderit fugit eligendi deleniti dolor, minima labore quos ratione suscipit!
+                <p id="tipp" class="spruch">
+                    Du bist perfekt!
+                    Hilf anderen zu sehen wie schön du innerlich bist.
                 </p>
             </article>
         </section>
